--- a/pupper.ipynb
+++ b/pupper.ipynb
@@ -50,7 +50,7 @@
     }
    ],
    "source": [
-    "!echo \"downloading\" && curl -s https://d2s8p88vqu9w66.cloudfront.net/releases/greengrass-nucleus-latest.zip > greengrass-nucleus-latest.zip && unzip -o greengrass-nucleus-latest.zip -d GreengrassCore && echo \"done\""
+    "!echo \"downloading\" && curl -s https://d2s8p88vqu9w66.cloudfront.net/releases/greengrass-nucleus-latest.zip > greengrass-nucleus-latest.zip && unzip -o greengrass-nucleus-latest.zip -d ~/GreengrassCore && echo \"done\""
    ]
   },
   {
