--- a/greengrass.ipynb
+++ b/greengrass.ipynb
@@ -63,7 +63,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "\n",
+    "# add your credential from AWS console\n",
     "export AWS_ACCESS_KEY_ID=\"\"\n",
     "export AWS_SECRET_ACCESS_KEY=\"\"\n",
     "export AWS_SESSION_TOKEN=\"\"\n",
@@ -166,7 +166,7 @@
     "export COMPONENT_NAME=com.example.ros2.demo\n",
     "\n",
     "export ARTIFACT_DIR=/greengrass/v2/packages/artifacts/$COMPONENT_NAME/1.0.0/\n",
-    "sudo docker-compose -f $ARTIFACT_DIR/docker-compose.yaml logs --follow"
+    "sudo docker-compose -f $ARTIFACT_DIR/docker-compose_nobuild.yaml logs --follow"
    ]
   },
   {
