--- a/minipupper.ipynb
+++ b/minipupper.ipynb
@@ -58,6 +58,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "ce18ca8e-584a-4771-a1a5-ac4237f23e17",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "\n",
+    "mkdir -p minipupper/playlists\n",
+    "mkdir -p minipupper/routines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "8b03dcf9",
    "metadata": {},
    "outputs": [],
@@ -204,7 +217,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.6"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
