--- a/minipupper.ipynb
+++ b/minipupper.ipynb
@@ -64,8 +64,8 @@
    "source": [
     "%%bash\n",
     "\n",
-    "mkdir -p minipupper/playlists\n",
-    "mkdir -p minipupper/routines"
+    "mkdir -p ~/minipupper/playlists\n",
+    "mkdir -p ~/minipupper/routines"
    ]
   },
   {
