--- a/camera_test.ipynb
+++ b/camera_test.ipynb
@@ -18,18 +18,22 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# code generated from chatgpt https://chatgpt.com/share/17a464ec-72c3-48b7-8d4c-37d48d7e3d9e\n",
+    "# chatgpt code https://chatgpt.com/share/17a464ec-72c3-48b7-8d4c-37d48d7e3d9e\n",
     "# Import necessary libraries\n",
     "import cv2\n",
     "from IPython.display import display\n",
     "import ipywidgets as widgets\n",
     "from threading import Thread\n",
     "\n",
+    "# Create a global variable to control the running state of the video capture loop\n",
+    "running = True\n",
+    "\n",
     "# Function to continuously update the image widget with video frames\n",
     "def update_image_widget(image_widget):\n",
+    "    global running\n",
     "    # Open a connection to the RPi camera\n",
     "    cap = cv2.VideoCapture(0)  # 0 is usually the default camera\n",
-    "    while True:\n",
+    "    while running:\n",
     "        # Capture frame-by-frame\n",
     "        ret, frame = cap.read()\n",
     "        if not ret:\n",
@@ -44,11 +48,23 @@
     "    # Release the camera resource\n",
     "    cap.release()\n",
     "\n",
+    "# Function to stop the video capture loop\n",
+    "def stop_camera(button):\n",
+    "    global running\n",
+    "    running = False\n",
+    "    stop_button.disabled = True  # Disable the stop button once clicked\n",
+    "\n",
     "# Create an Image widget to display video frames\n",
     "image_widget = widgets.Image(format='jpeg', width=640, height=480)\n",
     "\n",
-    "# Display the image widget\n",
-    "display(image_widget)\n",
+    "# Create a Button widget to stop the video capture\n",
+    "stop_button = widgets.Button(description=\"Stop Camera\")\n",
+    "\n",
+    "# Set the button's on-click event to call the stop_camera function\n",
+    "stop_button.on_click(stop_camera)\n",
+    "\n",
+    "# Display the image widget and the stop button\n",
+    "display(image_widget, stop_button)\n",
     "\n",
     "# Start a thread to update the image widget with video frames\n",
     "thread = Thread(target=update_image_widget, args=(image_widget,))\n",
@@ -58,7 +74,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e94f17c5-6a85-48c0-8b1e-15476518ab16",
+   "id": "bbab9e50-e1eb-4839-8287-a42aa2cbb5cf",
    "metadata": {},
    "outputs": [],
    "source": []
