--- a/gemini/food.ipynb
+++ b/gemini/food.ipynb
@@ -2,13 +2,26 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
+   "id": "d4476657-c8a6-42c7-a809-621def1f48a0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%%bash\n",
+    "pip install google-generativeai python-dotenv opencv-python ipywidgets\n",
+    "\n",
+    "# add credential in env.sample\n",
+    "cp env.sample .env"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "961adcfb-9d47-4491-b96b-686c4fb048a4",
    "metadata": {},
    "outputs": [],
    "source": [
     "from dotenv import load_dotenv\n",
-    "import streamlit as st\n",
     "import os\n",
     "import google_api\n",
     "from PIL import Image\n",
@@ -21,53 +34,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "3be107f8-8f8c-4856-9513-54c4a74ee5f0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "915cfcb63c4244d8b5835d5b43394ad0",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Image(value=b''), Textarea(value='You are an expert nutritionist where you need to see the food…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "53937c2cb0ee4ceab13f5dcb80042af9",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Button(description='Analyze', style=ButtonStyle()), Button(description='Stop Camera', style=But…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "037b452fcad64f7fbbfc5998be41aeaf",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Textarea(value='', description='Result:', disabled=True, layout=Layout(height='200px', width='600px'), placeho…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import Required Libraries\n",
     "import os, io\n",
@@ -183,6 +153,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "dc0e383e-4af6-45b8-940e-78105cd11d34",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3f4aaa0e-d24a-4c12-b64e-8009283d8b8c",
    "metadata": {},
    "outputs": [],
    "source": []
