--- a/gemini/food.ipynb
+++ b/gemini/food.ipynb
@@ -8,7 +8,8 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "pip install google-generativeai python-dotenv opencv-python ipywidgets\n",
+    "pip install google-generativeai python-dotenv opencv-python ipywidgets langchain
+langchain-google-vertexai\n",
     "\n",
     "# add credential in env.sample\n",
     "cp env.sample .env"
