--- a/gemini/food.ipynb
+++ b/gemini/food.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d34fcc00-2c09-4b6a-b2de-156f373e29ec",
+   "metadata": {},
+   "source": [
+    "### only need to run the first cell once"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "d4476657-c8a6-42c7-a809-621def1f48a0",
@@ -8,7 +16,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "pip install -r requirements.txt \n",
+    "pip install google-generativeai python-dotenv opencv-python ipywidgets\n",
     "\n",
     "# add credential in env.sample\n",
     "cp env.sample .env"
@@ -161,6 +169,30 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "3f4aaa0e-d24a-4c12-b64e-8009283d8b8c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "252dc1f6-4c96-45bb-8c4f-f298cb185309",
+   "metadata": {},
+   "source": [
+    "### only run the first cell once to setup all libraries, no need to run it again\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f19fcfed-cdf7-416b-8617-b268d39f1d18",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fe9d5f17-0ccf-4826-bc14-a7805420a043",
    "metadata": {},
    "outputs": [],
    "source": []
