--- a/gemini/food.ipynb
+++ b/gemini/food.ipynb
@@ -5,7 +5,7 @@
    "id": "d34fcc00-2c09-4b6a-b2de-156f373e29ec",
    "metadata": {},
    "source": [
-    "### only need to run the first cell once"
+    "### only need to run the first cell once to setup all pthon libraries and credential"
    ]
   },
   {
@@ -20,6 +20,14 @@
     "\n",
     "# add credential in env.sample\n",
     "cp env.sample .env"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e3cb7974-8455-4265-a1a6-aba5786b56c7",
+   "metadata": {},
+   "source": [
+    "## Here is the code to setup credential"
    ]
   },
   {
@@ -38,6 +46,14 @@
     "api_path = os.environ.get('API_KEY_PATH', '')\n",
     "if os.path.exists(api_path):\n",
     "    google_api.init_credentials(api_path)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b93639ca-53ff-4670-8251-16c86590723d",
+   "metadata": {},
+   "source": [
+    "## main code to run the analysis using a photo from a rpi camera"
    ]
   },
   {
@@ -156,46 +172,6 @@
     "camera_thread.daemon = True\n",
     "camera_thread.start()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "dc0e383e-4af6-45b8-940e-78105cd11d34",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "3f4aaa0e-d24a-4c12-b64e-8009283d8b8c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "id": "252dc1f6-4c96-45bb-8c4f-f298cb185309",
-   "metadata": {},
-   "source": [
-    "### only run the first cell once to setup all libraries, no need to run it again\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f19fcfed-cdf7-416b-8617-b268d39f1d18",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "fe9d5f17-0ccf-4826-bc14-a7805420a043",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
