--- a/gemini/food.ipynb
+++ b/gemini/food.ipynb
@@ -16,7 +16,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "pip install google-generativeai python-dotenv opencv-python ipywidgets\n",
+    "pip install -r requirements\n",
     "\n",
     "# add credential in env.sample\n",
     "cp env.sample .env"
