--- a/docker_run.ipynb
+++ b/docker_run.ipynb
@@ -17,8 +17,7 @@
    "source": [
     "%%bash\n",
     "## only install once\n",
-    "pip install awscli\n",
-    "pip install awscli --upgrade --user\n"
+    "sudo apt-get install awscli -y\n",
    ]
   },
   {
