--- a/docker_run.ipynb
+++ b/docker_run.ipynb
@@ -33,7 +33,7 @@
    "source": [
     "%%bash\n",
     "\n",
-    "#mkdir ~/.aws\n",
+    "mkdir ~/.aws\n",
     "touch ~/.aws/credentials"
    ]
   },
