--- a/docker_run.ipynb
+++ b/docker_run.ipynb
@@ -20,21 +20,8 @@
     "\n",
     "#pip3 install awscli --upgrade --user\n",
     "sudo apt-get install awscli -y\n",
-    "pip3 install awscli --upgrade --user\n",
+    "pip3 install awscli boto3 --upgrade --user\n",
     "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c6f66356-9de2-4f68-8564-ca792e448aa9",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "%%bash\n",
-    "\n",
-    "mkdir ~/.aws\n",
-    "touch ~/.aws/credentials"
    ]
   },
   {
@@ -52,13 +39,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%env  AWS_ACCESS_KEY_ID=\"\"\n",
-    "%env  AWS_SECRET_ACCESS_KEY=\"\"\n",
-    "%env  AWS_SESSION_TOKEN=\"\"\n",
-    "%env  aws_account_id=\n",
-    "%env  AWS_DEFAULT_REGION=us-east-1\n",
-    "%env  repository_name=ros-humble-greengrass-minipupper\n",
-    "%env  tag=latest\n",
+    "import os\n",
+    "\n",
+    "os.environ['AWS_ACCESS_KEY_ID']=\"\"\n",
+    "os.environ['AWS_SECRET_ACCESS_KEY']=\"\"\n",
+    "os.environ['AWS_SESSION_TOKEN']=\"\"\n",
+    "# Set your ECR details as environment variables\n",
+    "os.environ['ECR_ACCOUNT_ID']=''  # Replace with your actual account ID\n",
+    "os.environ['ECR_REGION']='us-east-1'           # Replace with your actual region\n",
+    "os.environ['ECR_IMAGE_NAME']='ros-humble-greengrass-minipupper'  # Replace with your image name\n",
+    "os.environ['ECR_TAG']='latest'                       # Replace with your image tag\n",
+    "\n",
     "\n",
     "from string import Template\n",
     "import os\n",
@@ -89,20 +80,64 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01a36fd7-0ac0-4f77-af8d-85f1403cbb06",
+   "id": "4d932f8c-97f8-4adc-af50-740cf6e2a6f1",
    "metadata": {},
    "outputs": [],
    "source": [
-    "%%bash\n",
+    "def retag_docker_image(old_image_tag, new_image_tag):\n",
+    "    try:\n",
+    "        # Run the docker tag command\n",
+    "        subprocess.run(['docker', 'tag', old_image_tag, new_image_tag], check=True)\n",
+    "        print(f\"Successfully retagged {old_image_tag} to {new_image_tag}\")\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        print(f\"Error retagging image: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "96614fef-94e8-45c7-8d57-7a3bec8434aa",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import base64\n",
+    "# Initialize a session using boto3\n",
+    "session = boto3.Session()\n",
+    "ecr_client = session.client('ecr')\n",
     "\n",
-    "aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin ${aws_account_id}.dkr.ecr.us-east-1.amazonaws.com\n",
+    "# Get the authorization token\n",
+    "token_response = ecr_client.get_authorization_token()\n",
+    "auth_data = token_response['authorizationData'][0]\n",
+    "registry = auth_data['proxyEndpoint']\n",
+    "authorization_token = auth_data['authorizationToken']\n",
     "\n",
-    "echo ${aws_account_id}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${repository_name}:${tag}\n",
-    "# pull ecr image\n",
-    "docker pull ${aws_account_id}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${repository_name}:${tag}\n",
+    "# Decode the token (it's base64 encoded)\n",
+    "decoded_token = base64.b64decode(authorization_token).decode('utf-8')\n",
+    "username, password = decoded_token.split(':')\n",
     "\n",
-    "# retag the docker image\n",
-    "docker tag ${aws_account_id}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${repository_name}:${tag} ${repository_name}:${tag} "
+    "# Log in to ECR using Docker with --password-stdin\n",
+    "try:\n",
+    "    process = subprocess.Popen(\n",
+    "        ['docker', 'login', '--username', username, '--password-stdin', registry],\n",
+    "        stdin=subprocess.PIPE,\n",
+    "        stdout=subprocess.PIPE,\n",
+    "        stderr=subprocess.PIPE,\n",
+    "    )\n",
+    "    # Send the password to the subprocess\n",
+    "    stdout, stderr = process.communicate(input=password.encode())\n",
+    "\n",
+    "    if process.returncode == 0:\n",
+    "        print(\"Login successful!\")\n",
+    "    else:\n",
+    "        print(f\"Error during Docker login: {stderr.decode().strip()}\")\n",
+    "except Exception as e:\n",
+    "    print(f\"An error occurred: {e}\")\n",
+    "\n",
+    "# Pull the Docker image using environment variables\n",
+    "image_name = f\"{os.getenv('ECR_ACCOUNT_ID')}.dkr.ecr.{os.getenv('ECR_REGION')}.amazonaws.com/{os.getenv('ECR_IMAGE_NAME')}:{os.getenv('ECR_TAG')}\"\n",
+    "subprocess.run(['docker', 'pull', image_name])\n",
+    "local_image = f\"{os.getenv('ECR_IMAGE_NAME')}:{os.getenv('ECR_TAG')}\"\n",
+    "retag_docker_image(image_name, local_image)"
    ]
   },
   {
@@ -128,7 +163,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "36395c91-8143-4108-9fc3-cfb0eb27869a",
+   "id": "22ae546f-18ed-4542-8b78-ce66c1fd8380",
    "metadata": {},
    "outputs": [],
    "source": []
