--- a/docker_run.ipynb
+++ b/docker_run.ipynb
@@ -20,7 +20,8 @@
     "\n",
     "#pip3 install awscli --upgrade --user\n",
     "sudo apt-get install awscli -y\n",
-    "pip3 install awscli boto3 --upgrade --user\n",
+    "pip install boto3\n",
+    "pip3 install awscli  --upgrade --user\n",
     "\n"
    ]
   },
@@ -49,32 +50,7 @@
     "os.environ['ECR_REGION']='us-east-1'           # Replace with your actual region\n",
     "os.environ['ECR_IMAGE_NAME']='ros-humble-greengrass-minipupper'  # Replace with your image name\n",
     "os.environ['ECR_TAG']='latest'                       # Replace with your image tag\n",
-    "\n",
-    "\n",
-    "from string import Template\n",
-    "import os\n",
-    "from pathlib import Path\n",
-    "\n",
-    "template_string = \"\"\"\n",
-    "[default]\n",
-    "aws_access_key_id=${AWS_ACCESS_KEY_ID}\n",
-    "aws_secret_access_key=${AWS_SECRET_ACCESS_KEY}\n",
-    "aws_session_token=${AWS_SESSION_TOKEN}\n",
-    "\n",
-    "\"\"\"\n",
-    "\n",
-    "template = Template(template_string)\n",
-    "filled_content = template.substitute(os.environ)\n",
-    "\n",
-    "# Define the AWS credentials file path\n",
-    "aws_credentials_path = Path.home() / '.aws' / 'credentials'\n",
-    "\n",
-    "# Ensure the .aws directory exists\n",
-    "aws_credentials_path.parent.mkdir(parents=True, exist_ok=True)\n",
-    "\n",
-    "# Write the content to the AWS credentials file\n",
-    "with open(aws_credentials_path, \"w\") as f:\n",
-    "    f.write(filled_content)\n"
+    "\n"
    ]
   },
   {
@@ -101,8 +77,12 @@
    "outputs": [],
    "source": [
     "import base64\n",
+    "import subprocess\n",
+    "import boto3\n",
     "# Initialize a session using boto3\n",
-    "session = boto3.Session()\n",
+    "\n",
+    "session = boto3.Session(region_name=os.getenv('ECR_REGION'))  # Replace with your desired region\n",
+    "\n",
     "ecr_client = session.client('ecr')\n",
     "\n",
     "# Get the authorization token\n",
