--- a/ieee2024.ipynb
+++ b/ieee2024.ipynb
@@ -238,8 +238,9 @@
     "sudo apt-get install ffmpeg portaudio19-dev -y\n",
     "\n",
     "## install python library\n",
+    "pip uninstall pycrypto",
     "pip install opencv-python-headless ipywidgets opencv-python\n",
-    "pip install pydub pyaudio pydub"
+    "pip install pydub pyaudio pydub pycryptodome"
    ]
   },
   {
