--- a/ieee2024.ipynb
+++ b/ieee2024.ipynb
@@ -238,7 +238,7 @@
     "sudo apt-get install ffmpeg portaudio19-dev -y\n",
     "\n",
     "## install python library\n",
-    "pip uninstall pycrypto",
+    "pip uninstall pycrypto\n",
     "pip install opencv-python-headless ipywidgets opencv-python\n",
     "pip install pydub pyaudio pydub pycryptodome"
    ]
