--- a/ieee2024.ipynb
+++ b/ieee2024.ipynb
@@ -22,7 +22,7 @@
     "## install python library\n",
     "pip uninstall pycrypto\n",
     "pip install opencv-python-headless ipywidgets opencv-python\n",
-    "pip install pydub pyaudio pydub pycryptodome"
+    "pip install pydub pyaudio pydub pycryptodome simple-pid"
    ]
   },
   {
