--- a/minipupper.ipynb
+++ b/minipupper.ipynb
@@ -175,7 +175,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "export COMPONENT_NAME=com.example.ros.pupper.dance\n",
+    "export COMPONENT_NAME=com.example.ros2.mini_pupper_v2\n",
     "#export COMPONENT_NAME=com.example.ros2.demo\n",
     "\n",
     "export ARTIFACT_DIR=/greengrass/v2/packages/artifacts/$COMPONENT_NAME/1.0.0/\n",
