--- a/minipupper.ipynb
+++ b/minipupper.ipynb
@@ -65,7 +65,9 @@
     "%%bash\n",
     "\n",
     "mkdir -p ~/minipupper/playlists\n",
-    "mkdir -p ~/minipupper/routines"
+    "mkdir -p ~/minipupper/routines\n",
+    "cp -r ./playlists  ~/minipupper/playlists\n",
+    "cp -r ./routines  ~/minipupper/routines"
    ]
   },
   {
