--- a/minipupper.ipynb
+++ b/minipupper.ipynb
@@ -66,8 +66,8 @@
     "\n",
     "mkdir -p ~/minipupper/playlists\n",
     "mkdir -p ~/minipupper/routines\n",
-    "cp -r ./playlists  ~/minipupper/playlists\n",
-    "cp -r ./routines  ~/minipupper/routines"
+    "cp -r ~/mangdang/playlists  ~/minipupper/playlists\n",
+    "cp -r ~/mangdang/routines  ~/minipupper/routines"
    ]
   },
   {
