--- a/camera_test.ipynb
+++ b/camera_test.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "%%bash\n",
-    "pip install opencv-python-headless ipywidgets opencv-python\n"
+    "pip install opencv-python-headless ipywidgets opencv-python==4.10.0.84\n"
    ]
   },
   {
