--- a/ieee2025.ipynb
+++ b/ieee2025.ipynb
@@ -28,7 +28,7 @@
     "\n",
     "## install python library\n",
     "pip uninstall pycrypto\n",
-    "pip install opencv-python-headless ipywidgets opencv-python\n",
+    "pip install opencv-python-headless ipywidgets opencv-python==4.10.0.84\n",
     "pip install pydub pyaudio pydub pycryptodome simple-pid"
    ]
   },
