--- a/ieee2025.ipynb
+++ b/ieee2025.ipynb
@@ -16,6 +16,7 @@
     "cp -r ~/mangdang/routines  ~/minipupper/\n",
     "\n",
     "\n",
+    "git clone https://github.com/lbaitemple/StanfordQuadruped\n",
     "## cop gemini credential\n",
     "cp -r .gemini ~/.gemini\n",
     "\n",
