--- a/ieee2025.ipynb
+++ b/ieee2025.ipynb
@@ -17,7 +17,9 @@
     "\n",
     "\n",
     "git clone https://github.com/lbaitemple/StanfordQuadruped\n",
-    "## cop gemini credential\n",
+    "\n",
+    "\n",
+    "## copy gemini credential\n",
     "cp -r .gemini ~/.gemini\n",
     "\n",
     "## setup sound conf\n",
